# wpsofficeProject

./: .gitmodules  CMakeLists.txt  README.md  common.cmake  common.pri  etcomment.cpp  etcomment.h  libstdc++.so.6  log_global.h  main.cpp  mainwindow.ui  officedemo.pro  officegeneralabilities.cpp  officegeneralabilities.h  pptCFunOutput.pro  pptcfunoutout.cpp  pptcfunoutput.cpp  utilitytool.cpp  utilitytool.h  wppcomment.cpp  wppcomment.h  wpscomment.cpp  wpscomment.h  wpsmanager.cpp  wpsmanager.h  zttoolst.cpp  zttoolst.h
libolecfself/: CMakeLists.txt  olecfself.cpp  olecfself.h  olecfself.pro
libolecfself/include/common/: byte_stream.h  common.h  config.h  config_borlandc.h  config_msc.h  config_winapi.h  file_stream.h  memory.h  narrow_string.h  system_string.h  types.h  wide_string.h
libolecfself/include/libbfio/: Makefile.am~  libbfio_codepage.h  libbfio_definitions.h  libbfio_definitions.h~  libbfio_error.h  libbfio_extern.h  libbfio_file.h  libbfio_file_io_handle.h  libbfio_file_pool.h  libbfio_file_range.h  libbfio_file_range_io_handle.h  libbfio_handle.h  libbfio_libcdata.h  libbfio_libcerror.h  libbfio_libcfile.h  libbfio_libclocale.h  libbfio_libcpath.h  libbfio_libcthreads.h  libbfio_libuna.h  libbfio_memory_range.h  libbfio_memory_range_io_handle.h  libbfio_pool.h  libbfio_support.h  libbfio_system_string.h  libbfio_types.h  libbfio_unused.h
libolecfself/include/libcdata/: Makefile.am~  libcdata_array.h  libcdata_btree.h  libcdata_btree_node.h  libcdata_btree_values_list.h  libcdata_definitions.h  libcdata_definitions.h~  libcdata_error.h  libcdata_extern.h  libcdata_libcerror.h  libcdata_libcthreads.h  libcdata_list.h  libcdata_list_element.h  libcdata_range_list.h  libcdata_range_list_value.h  libcdata_support.h  libcdata_tree_node.h  libcdata_types.h  libcdata_unused.h
libolecfself/include/libcerror/: Makefile.am~  libcerror_definitions.h  libcerror_definitions.h~  libcerror_error.h  libcerror_extern.h  libcerror_support.h  libcerror_system.h  libcerror_types.h  libcerror_unused.h
libolecfself/include/libolecf/: libolecf.h  libolecf_allocation_table.h  libolecf_codepage.h  libolecf_compound_object_stream.h  libolecf_debug.h  libolecf_definitions.h  libolecf_directory_entry.h  libolecf_directory_list.h  libolecf_directory_tree.h  libolecf_error.h  libolecf_extern.h  libolecf_file.h  libolecf_file_header.h  libolecf_io_handle.h  libolecf_item.h  libolecf_libbfio.h  libolecf_libcdata.h  libolecf_libcerror.h  libolecf_libclocale.h  libolecf_libcnotify.h  libolecf_libfdatetime.h  libolecf_libfguid.h  libolecf_libfole.h  libolecf_libfvalue.h  libolecf_libfwps.h  libolecf_libuna.h  libolecf_notify.h  libolecf_ole.h  libolecf_property_section.h  libolecf_property_set.h  libolecf_property_set_stream.h  libolecf_property_value.h  libolecf_stream.h  libolecf_support.h  libolecf_types.h  libolecf_unused.h  olecf_compound_object.h  olecf_directory.h  olecf_file_header.h  olecf_property_set.h
libolecfself/src/: defines.cmake  publicArgs.pri  publicargs.cmake
libolecfself/src/common/: .types.h.in.swp  common.pro
libolecfself/src/documentation/: OLE Compound File format.asciidoc
libolecfself/src/libbfio/: CMakeLists.txt  libbfio.pro  libbfio_error.c  libbfio_file.c  libbfio_file_io_handle.c  libbfio_file_pool.c  libbfio_file_range.c  libbfio_file_range_io_handle.c  libbfio_handle.c  libbfio_memory_range.c  libbfio_memory_range_io_handle.c  libbfio_pool.c  libbfio_support.c  libbfio_system_string.c
libolecfself/src/libcdata/: CMakeLists.txt  Makefile.am~  libcdata.pro  libcdata_array.c  libcdata_btree.c  libcdata_btree_node.c  libcdata_btree_values_list.c  libcdata_error.c  libcdata_list.c  libcdata_list_element.c  libcdata_range_list.c  libcdata_range_list_value.c  libcdata_support.c  libcdata_tree_node.c
libolecfself/src/libcerror/: CMakeLists.txt  Makefile.am~  libcerror.pro  libcerror_error.c  libcerror_support.c  libcerror_system.c
libolecfself/src/libcfile/: CMakeLists.txt  Makefile.am~  libcfile.pro  libcfile_error.c  libcfile_file.c  libcfile_notify.c  libcfile_support.c  libcfile_system_string.c  libcfile_winapi.c
libolecfself/src/libclocale/: CMakeLists.txt  Makefile.am~  libclocale.pro  libclocale_codepage.c  libclocale_locale.c  libclocale_support.c  libclocale_wide_string.c
libolecfself/src/libcnotify/: CMakeLists.txt  Makefile.am~  libcnotify.pro  libcnotify_print.c  libcnotify_stream.c  libcnotify_support.c  libcnotify_verbose.c
libolecfself/src/libcpath/: CMakeLists.txt  Makefile.am~  libcpath.pro  libcpath_error.c  libcpath_path.c  libcpath_support.c  libcpath_system_string.c
libolecfself/src/libcsplit/: CMakeLists.txt  Makefile.am~  libcsplit.pro  libcsplit_error.c  libcsplit_narrow_split_string.c  libcsplit_narrow_string.c  libcsplit_support.c  libcsplit_wide_split_string.c  libcsplit_wide_string.c
libolecfself/src/libcthreads/: CMakeLists.txt  Makefile.am~  libcthreads.pro  libcthreads_condition.c  libcthreads_error.c  libcthreads_lock.c  libcthreads_mutex.c  libcthreads_queue.c  libcthreads_read_write_lock.c  libcthreads_repeating_thread.c  libcthreads_support.c  libcthreads_thread.c  libcthreads_thread_attributes.c  libcthreads_thread_pool.c
libolecfself/src/libfdatetime/: CMakeLists.txt  Makefile.am~  libfdatetime.pro  libfdatetime_date_time_values.c  libfdatetime_error.c  libfdatetime_fat_date_time.c  libfdatetime_filetime.c  libfdatetime_floatingtime.c  libfdatetime_hfs_time.c  libfdatetime_nsf_timedate.c  (+3 more)
qunzip/: CMakeLists.txt  quazipSelf.pro
qunzip/include/: JlCompress.h  minizip_crypt.h  quaadler32.h  quachecksum32.h  quacrc32.h  quagzipfile.h  quaziodevice.h  quazip.h  quazip_global.h  quazip_qt_compat.h  quazipdir.h  quazipfile.h  quazipnewinfo.h
qunzip/lib/: libquazipSelf.so.1.0.0
qunzip/src/: JlCompress.cpp  qioapi.cpp  quaadler32.cpp  quachecksum32.cpp  quacrc32.cpp  quagzipfile.cpp  quaziodevice.cpp  quazip.cpp  quazipdir.cpp  quazipfile.cpp  quazipfileinfo.cpp  quazipnewinfo.cpp  unzip.c  zip.c
spdlog/: .clang-format  CMakeLists.txt  spdlog.pro
spdlog/src/: bundled_fmtlib_format.cpp
(+766 files in other folders)
